@@ -24,3 +24,9 @@ SUBDIR+= tests
 
 WARNS=3
 CFLAGS+= -DNO_PWD_OVERRIDE
+
+.if make(after-import)
+# use our preferred value
+DEFAULT_SYS_PATH= .../share/mk:/usr/share/mk
+.export DEFAULT_SYS_PATH
+.endif
